--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "mongoose": "^8.0.3"
   }
 }
