--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@types/crypto-js": "^4.2.1",
     "axios": "^1.6.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
