Added nodemon to server

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2"
   }
 }
