--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.1",
-    "ts-node": "^10.9.2"
+    "@types/express": "^4.17.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,6 +21,7 @@
     "express-oauth2-jwt-bearer": "^1.6.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
