--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es2015",
     "esModuleInterop": true,
     "target": "es6",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": "./src",
@@ -13,7 +13,4 @@
       ]
     }
   },
-  "lib": [
-    "es2015"
-  ]
 }
